--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -57,10 +57,9 @@ body {
 	color: var(--color-primary-dark);
 	overflow-x: hidden;
 }
-body.fix{
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
+.disableScroll{
+	height: 100%; 
+	overflow-y: hidden !important;
 }
 h1,h2,h3,h4,h5,h6{
 	font-family: var(--font-heading);
@@ -298,28 +297,30 @@ ul, ol, li {
 	width: 100vw;
 	height: auto;
 	background-color: var(--color-white);
-    color: var(--color-primary-dark);
-    line-height: var(--header-height);
-    border-top: 2px solid var(--color-primary-dark);
-    margin: 0;
-    margin-top: 2em;
-    padding: 0;
+	color: var(--color-primary-dark);
+	line-height: var(--header-height);
+	border-top: 2px solid var(--color-primary-dark);
+	margin: 0;
+	margin-top: 2em;
+	padding: 0;
+	flex-direction: column;
+	align-items: center;
 }
-
 #footer > ul {
 	margin: 0;
 	width: 65vw;
 	height: 90px;
 }
+#footer > ul > li:first-child {
+	width: 20vw;
+	height: 100%;
+}
+
 #footer > ul:first-child {
 	margin-top: 5px;
 	border-bottom: 1px solid var(--color-primary-dark);
 	justify-content: flex-start;
 	align-items: center;
-}
-#footer > ul > li:first-child {
-	width: 20vw;
-	height: 100%;
 }
 
 #footer > ul > li:nth-child(2) {
@@ -353,7 +354,9 @@ ul, ol, li {
 	justify-content: flex-end ;
 	align-items: baseline;
 }
-
+#footer > ul:nth-child(2) {
+	align-items: center;
+}
 #footer > ul:nth-child(2) >li:nth-child(1){
 	justify-content: flex-start;
 	align-items: center;
@@ -374,8 +377,6 @@ ul, ol, li {
 	height: 50px;
 }
 
-
-
 #footer .form-label-animated {
     font-size: 1.2em;
     color: var(--color-primary-dark);
@@ -391,82 +392,115 @@ ul, ol, li {
     top: -4.5em;
 }
 
+	#footer > ul:nth-child(2) > li:first-child,
+	#footer > ul:nth-child(2) > li:first-child a,
+	#footerLogo  {
+		width: 150px;
+		height: 50px;
+	}
+
+@media screen and (max-width: 1000px){
+	
+	#footer > ul {
+		margin: 0;
+		width: 65vw;
+		height: auto;
+	}
+
+
+	#footer > ul:first-child {
+		width: 65vw;
+		flex-direction: column;
+		margin: 0;
+	}
+
+	#footer > ul:first-child > li:nth-child(2) {
+		width: 100%;
+		height: 90px;
+		justify-content: center;
+		align-items: center;
+
+	}
+	#footer > ul:first-child > li:nth-child(2) ul {
+		width:100%;
+		height: 90px;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul{
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul > li:first-child {
+		width: 60%;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul > li:nth-child(2){
+		width: 30%;
+		text-align: center;
+	}
+	#footer > ul > li:first-child {
+		width: 100%;
+		height: 100%;
+	}
+	#footer > ul > li:first-child > ul {
+		width: 60%;
+		height: 100%;
+		margin: 0 auto;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	#footer > ul:nth-child(2) {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		margin: 1em auto;
+	}
+	#footer > ul:nth-child(2) > li:first-child,
+	#footer > ul:nth-child(2) > li:first-child a,
+	#footerLogo  {
+		width: 150px;
+		height: 35px;
+
+	}
+
 }
 @media screen and (max-width: 550px){
-		#footer{
-			padding-bottom: 1em;
-		}
-	/*TOP SECTION OF FOOTER*/
-	#footer > ul {
-		width: 100%;
+	#footer > ul:nth-child(2) {
+		margin: 1em auto;
 		height: auto;
-	}
-	#footer > ul:first-child {
-		flex-direction: column;
+		gap: 0.5em;
+		flex-direction: column-reverse;
 		justify-content: center;
 		align-items: center;
-	}
-	#footer > ul:first-child > li,
-	#footer > ul:first-child > li > ul {
-		width: 100%;
-		justify-content: center;
-		gap: 20px;
-	}
-	#footer > ul:first-child > li:nth-child(2),
-	#footer > ul:first-child > li:nth-child(2)> ul{
-		width: 90%;
-		justify-content: center;
-	}
-	#footer > ul > li > form > ul  {
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		width: 100%;
-		gap: 0;
-		margin: 0;
-		height: auto;
-	}
-	#footer > ul > li > form > ul > li:first-child {
-	width: 75%;
-	}
-	#footer > ul > li > form > ul > li:nth-child(2) {
-		width: 40%;
-	}
-
-
-	/*BOTTOM SECTION OF FOOTER*/
-		#footer > ul:nth-child(2) {
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-	#footer > ul:nth-child(2) > li {
-		width: 100%;
-		justify-content: center;
-		align-items: center;
-	}
-	#footer > ul:nth-child(2) > ul {
-		width: 100%;
-	}
-	#footer > ul:nth-child(2) >li:nth-child(1){
-		justify-content: center;
-		align-items: center;
-		margin-top: 1em;
-	}
-	#footer > ul:nth-child(2) > ul {
-
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
 	}
 	#footer > ul:nth-child(2) >li:nth-child(2){
-	justify-content: center;
-	align-items: center;
+		justify-content: center;
 	}
-	
-}
+	#footer > ul:first-child > li:nth-child(2),
+	#footer > ul:first-child > li:nth-child(2) > form,
+	#footer > ul:first-child > li:nth-child(2) > form > ul {
+		height: auto;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul > li:first-child {
+		height: 40px;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul{
 
+		flex-direction: column;
+		align-items: center;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul > li:first-child {
+		width: 100%;
+	}
+	#footer > ul:first-child > li:nth-child(2) > form > ul > li:nth-child(2){
+		width: 100%;
+		text-align: center;
+	}
+		#footer > ul > li:first-child > ul {
+		width: 100%;
+
+	}
+
+}
 @media screen and (min-width: 550px){
 	flex-wrap: wrap;
 }
@@ -918,4 +952,55 @@ textarea{
 
 #adminProductSubmit{
 	text-transform: uppercase;
+}
+
+
+#cart_delete_btn {
+	margin-top: 1em;
+}
+@media screen and (max-width: 550px){
+	#cartMain >div > div> div> div> div {
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}	
+		#cartMain >div > div> div> div> div:nth-child(3){
+			order: 2;
+		}
+	#cartMain >div > div> div> div> div div,
+	#cartMain >div > div> div> div> div form,
+	#cartMain >div > div> div> div> div input {
+		width: 100%;
+	}
+		#cartMain .cart-product-price {
+		order:  2;
+		width: 100%;
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		padding-top: 0;
+		padding-bottom: 2em;
+	}
+	#cartMain .cart-product-price > div,
+	#cartMain .cart-product-price > strong {
+		width: auto;
+	}
+	#cartMain .images-thumbs div img{
+		width: 100%;
+		height: auto;
+		object-fit: cover;
+	}
+
+	#cartMain .card-product-section:nth-child(2) form:nth-child(2){
+		margin-top :1em;
+	}
+
+	#cartMain .card-product-section:nth-child(2) form:nth-child(3){
+		margin-top :1em;
+	}
+	#productBenefits > figure {
+		height: auto;
+	}
 }
